--- a/react-app/src/components/Header/Header.css
+++ b/react-app/src/components/Header/Header.css
@@ -5,6 +5,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  position: relative;
+  z-index: 1000;
 }
 
 /* LOGO */
