--- a/Frontend/JugueriaFront/src/styles/Login.css
+++ b/Frontend/JugueriaFront/src/styles/Login.css
@@ -1,4 +1,11 @@
-.fm-ContenedorDelTodoLogin{
+body {
+    background-image: url('../assets/FondoPrincipalLR.webp');
+    background-repeat: no-repeat;
+    background-position: 50% 120%;
+    background-size: 50rem;
+}
+
+.fm-ContenedorDelTodoLogin {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,13 +15,13 @@
     position: relative;
 }
 
-.fm-Formulario{
+.fm-Formulario {
     display: flex;
     flex-direction: column;
-    width: 30rem;
-    height: 25rem;
     justify-content: center;
     align-items: center;
+    width: 17rem;
+    height: 28rem;
     border-radius: 50px;
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
@@ -22,28 +29,234 @@
     padding: 1rem;
 }
 
-.fm-LogoJugueria{
+.fm-LogoJugueria {
     width: 150px;
     height: 150px;
-    position: absolute; 
-    top: 20px;          
-    right: 20px;        
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 
-.fm-Formulario-h1{
-    font-size: 2rem;
-    font-weight: 999;
+.fm-Formulario-h1 {
+    font-family: system-ui, Arial, sans-serif;
+    font-size: 2.5rem;
+    font-weight: 900;
+    position: relative;
+
 }
-.fm-Formulario-inputs{
+
+.fm-Formulario-Strong {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 10;
+    font-size: 0.9rem;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    text-align: center;
+    margin-bottom: 2rem;
 }
 
-.fm-Formulario-LinkRegistro{
+.fm-Formulario-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+
+}
+
+.fm-Formulario-LinkRegistro {
     text-decoration: none;
-    color: #000000;
-    font-weight: 550;
+    color: #F87500;
+    font-weight: bold;
 
 }
 
+.fm-Formulario-LinkOlvido {
+    text-decoration: none;
+    color: #003391;
+    font-weight: bold;
+    align-self: center;
+    top: -10px;
+    position: relative;
+}
+
+
+@media (min-width:375px) {
+    body {
+        background-position: 50% 130%;
+        background-size: 60rem;
+    }
+
+    .fm-Formulario {
+        width: 20rem;
+        height: 27rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 5rem;
+        height: 5rem;
+    }
+}
+
+@media (min-width:768px) {
+    body {
+        background-position: 50% 120%;
+        background-size: 75rem;
+    }
+
+    .fm-Formulario {
+        width: 25rem;
+        height: 32rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 6rem;
+        height: 6rem;
+    }
+
+    .fm-Formulario-h1 {
+        font-size: 2.6rem;
+    }
+
+    .fm-Formulario-Strong {
+        font-size: 1rem;
+    }
+
+    .fm-Formulario-LinkOlvido {
+        align-self: start;
+        top: -20px;
+        position: relative;
+    }
+
+}
+
+@media (min-width:800px) {
+    body {
+        background-position: 50% 140%;
+        background-size: 85rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 7rem;
+        height: 7rem;
+    }
+}
+
+@media (min-width:1024px) {
+    body {
+        background-position: 50% 190%;
+        background-size: 80rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 7rem;
+        height: 7rem;
+    }
+
+    .fm-Formulario-Strong {
+        font-size: 1.2rem;
+    }
+
+}
+
+@media (min-width:1120px) {
+    body {
+        background-position: 50% 200%;
+        background-size: 80rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 7rem;
+        height: 7rem;
+    }
+}
+
+@media (min-width:1200px) {
+    body {
+        background-position: 50% 310%;
+        background-size: 90rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 8rem;
+        height: 8rem;
+    }
+}
+
+@media (min-width:1436px) {
+    body {
+        background-position: 50% 310%;
+        background-size: 106rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 8rem;
+        height: 8rem;
+    }
+}
+
+@media (min-width:1550px) {
+    body {
+        background-position: 50% 210%;
+        background-size: 110rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 8rem;
+        height: 8rem;
+    }
+
+    .fm-Formulario-Strong {
+        font-size: 1.1rem;
+        display: block;
+    }
+
+    .fm-Formulario {
+        width: 30rem;
+        height: 30rem;
+    }
+
+    .fm-Formulario-inputs {
+        gap: 30px;
+
+    }
+}
+
+@media (min-width:1640px) {
+    body {
+        background-position: 50% 200%;
+        background-size: 110rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 8rem;
+        height: 8rem;
+    }
+}
+
+@media (min-width:1700px) {
+    body {
+        background-position: 50% 250%;
+        background-size: 110rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 10rem;
+        height: 10rem;
+    }
+}
+
+@media (min-width:1900px) {
+    body {
+        background-position: 50% -50%;
+        background-size: 120rem;
+    }
+
+    .fm-FormularioRegistro {
+        width: 30rem;
+        height: 33rem;
+    }
+
+    .fm-LogoJugueria {
+        width: 10rem;
+        height: 10rem;
+    }
+}
