--- a/Frontend/JugueriaFront/src/App.css
+++ b/Frontend/JugueriaFront/src/App.css
@@ -6,3 +6,11 @@ body{
   min-height: 100vh;
   max-width: 100%;
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #f7f9fc;
+  color: #333;
+}
