--- a/Frontend/JugueriaFront/src/styles/Register.css
+++ b/Frontend/JugueriaFront/src/styles/Register.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 17rem;
-    height: 37rem;
+    height: 40rem;
     justify-content: center;
     align-items: center;
     border-radius: 40px;
@@ -50,6 +50,19 @@ body {
     flex-direction: column;
     gap: 20px;
 }
+.error-message {
+    background-color: #fce4e4;
+    border: 1px solid #c00;
+    color: #c00;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: bold;
+    width: 90%;
+    padding: 8px;
+    margin: 10px auto;
+    font-size: 0.8rem;
+    order: 10;
+}
 
 @media (min-width:375px) {
     body {
@@ -59,7 +72,8 @@ body {
 
     .fm-FormularioRegistro {
         width: 20rem;
-        height: 37rem;
+        height: 38rem;
+        padding: 1.3rem;
     }
 
     .fm-LogoJugueria {
@@ -76,7 +90,16 @@ body {
 
     .fm-FormularioRegistro {
         width: 25rem;
-        height: 40rem;
+        height: 42rem;
+        padding: 1.5rem;
+    }
+
+    .error-message {
+        width: 80%; 
+        padding: 10px;
+        font-size: 0.9rem; 
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .fm-LogoJugueria {
@@ -113,7 +136,8 @@ body {
 
     .fm-FormularioRegistro {
         width: 30rem;
-        height: 42rem;
+        height: 43rem;
+        padding: 1.5rem;
     }
     .fm-LogoJugueria {
         width: 7rem;
@@ -136,7 +160,7 @@ body {
 
 @media (min-width:1200px) {
     body {
-        background-position: 50% 350%;
+        background-position: 50% 150%;
         background-size: 90rem;
     }
 
@@ -148,8 +172,8 @@ body {
 
 @media (min-width:1436px) {
     body {
-        background-position: 50% 350%;
-        background-size: 90rem;
+        background-position: 50% 180%;
+        background-size: 95rem;
     }
 
     .fm-LogoJugueria {
@@ -202,7 +226,8 @@ body {
 
     .fm-FormularioRegistro {
         width: 30rem;
-        height: 43rem;
+        height: 45rem;
+        padding: 2rem;
     }
 
     .fm-LogoJugueria {
