--- a/Frontend/JugueriaFront/src/styles/Register.css
+++ b/Frontend/JugueriaFront/src/styles/Register.css
@@ -1,4 +1,4 @@
-body {
+.body {
     background-image: url('../assets/FondoPrincipalLR.webp');
     background-repeat: no-repeat;
     background-position: 50% 130%;
