--- a/Frontend/JugueriaFront/src/styles/Login.css
+++ b/Frontend/JugueriaFront/src/styles/Login.css
@@ -79,6 +79,31 @@
 }
 
 
+/* Modal overlay */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6); /* Fondo semi-transparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999; /* Siempre encima */
+}
+
+/* Contenido del modal */
+.modal-content {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 8px;
+  width: 300px;
+  max-width: 90%;
+  text-align: center;
+}
+
+
 @media (min-width:375px) {
     body {
         background-position: 50% 130%;
