--- a/Frontend/JugueriaFront/src/styles/Login.css
+++ b/Frontend/JugueriaFront/src/styles/Login.css
@@ -86,11 +86,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.6); /* Fondo semi-transparente */
+  background: rgba(0,0,0,0.6); 
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 999; /* Siempre encima */
+  z-index: 999;
 }
 
 /* Contenido del modal */
