--- a/Frontend/JugueriaFront/src/styles/Register.css
+++ b/Frontend/JugueriaFront/src/styles/Register.css
@@ -1,4 +1,4 @@
-.body {
+body {
     background-image: url('../assets/FondoPrincipalLR.webp');
     background-repeat: no-repeat;
     background-position: 50% 130%;
@@ -208,7 +208,7 @@
 
 @media (min-width:1700px) {
     body {
-        background-position: 50% 250%;
+        background-position: 50% 10%;
         background-size: 110rem;
     }
 
